--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
     <div class="py-3 clearfix">
       <h1 class="site-title mb-0">Atik Kazi</h1>
       <div class="site-nav">
-        <nav role="navigation">
-          <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
-            </li>
-          </ul>
-        </nav>
+<!--        <nav role="navigation">-->
+<!--          <ul class="nav justify-content-center">-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </nav>-->
       </div>
     </div>
   </div>
@@ -205,28 +205,28 @@
               <div class="pb-2 text-secondary">kaziatik4757@gmail.com</div>
             </div>
           </div>
-          <div class="col d-none d-print-block">
-            <div class="mt-2">
-              <div>
-                <div class="mb-2">
-                  <div class="text-dark"><i class="fab fa-twitter mr-1"></i><span>https://twitter.com/templateflip</span>
-                  </div>
-                </div>
-                <div class="mb-2">
-                  <div class="text-dark"><i class="fab fa-facebook mr-1"></i><span>https://www.facebook.com/templateflip</span>
-                  </div>
-                </div>
-                <div class="mb-2">
-                  <div class="text-dark"><i class="fab fa-instagram mr-1"></i><span>https://www.instagram.com/templateflip</span>
-                  </div>
-                </div>
-                <div class="mb-2">
-                  <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/templateflip</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col d-none d-print-block">-->
+<!--            <div class="mt-2">-->
+<!--              <div>-->
+<!--                <div class="mb-2">-->
+<!--                  <div class="text-dark"><i class="fab fa-twitter mr-1"></i><span>https://twitter.com/templateflip</span>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <div class="mb-2">-->
+<!--                  <div class="text-dark"><i class="fab fa-facebook mr-1"></i><span>https://www.facebook.com/templateflip</span>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <div class="mb-2">-->
+<!--                  <div class="text-dark"><i class="fab fa-instagram mr-1"></i><span>https://www.instagram.com/templateflip</span>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <div class="mb-2">-->
+<!--                  <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/templateflip</span>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
         </div>
       </div>
     </div></div>
@@ -236,18 +236,18 @@
     <div class="my-3">
       <div class="h4">Atik Kazi</div>
       <div class="footer-nav">
-        <nav role="navigation">
-          <ul class="nav justify-content-center">
-            <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
-            </li>
-          </ul>
-        </nav>
+<!--        <nav role="navigation">-->
+<!--          <ul class="nav justify-content-center">-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </nav>-->
       </div>
     </div>
 
